# canny-cpu

./: CMakeLists.txt  README.md  canny.cpp  canny.hpp  io.cpp  io.hpp  main.cpp
